--- a/css/index.css
+++ b/css/index.css
@@ -308,17 +308,25 @@ section.cessaoTerciaria {
 	text-align: center;
 }
 
-footer#footer {
+div#oferecemosSeletores {
+	display: flex;
+	justify-content: center;
+	gap: 25px;
+	margin: 64px 0;
+}
+
+footer#footer div.footerContainer {
 	display: grid;
-	grid-template-columns: auto auto auto auto auto;
-	grid-template-rows: auto auto;
-	align-items: center;
+	grid-template-columns: auto auto auto;
+	grid-template-rows: auto auto auto;
+	justify-content: center;
+	gap: 10px 64px;
+	margin: 32px auto;
 }
 
 footer#footer div:nth-child(1) {
 	grid-row: 1;
-	grid-column: 2/3;
-	margin-top: 36px;
+	grid-column: 1/2;
 }
 
 footer#footer div {
@@ -337,13 +345,13 @@ footer#footer div:nth-child(1) p.fraseDesc {
 
 footer#footer div:nth-child(3) {
 	grid-row: 1;
-	grid-column: 4/5;
+	grid-column: 3/4;
 	text-align: left;
 }
 
 footer#footer div:nth-child(2) {
 	grid-row: 1;
-	grid-column: 3/4;
+	grid-column: 2/3;
 	width: 5px;
 	height: 80%;
 	background-color: var(--secundaria);
@@ -351,6 +359,6 @@ footer#footer div:nth-child(2) {
 
 footer#footer h4 {
 	grid-row-start: 2/2;
-	grid-column: 1/6;
+	grid-column: 1/4;
 	text-align: center;
 }
